test_src/compiler_errors/types/arithmetic/SubtractBoolError1.b
class SubtractBoolError1 {
    void test() {
        println(true - 1);
    }
}
